# resource_allocation

./: .gitignore  CMakeLists.txt  README.md
include/: file_parser.h
include/knapsack/: generator.hpp  greedy.hpp  knapsack.hpp  solution.hpp
src/: CMakeLists.txt  file_parser.cpp  main.cpp  problem_data.cpp  problem_data.hpp
src/knapsack/: CMakeLists.txt  generator.cpp  greedy.cpp  knapsack.cpp  solution.cpp
tests/: test_file_parser.cpp  test_problem_data.cpp
tests/data/: test_data_1.txt
